--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 </div>
                 <div>
                     <h1 class="boutique-name">Boutique En Ligne</h1>
-                    <p class="owner">Propriétaire: <strong>Jean Dupont</strong></p>
+                    <p class="owner">Propriétaire: <strong>JEAN-KOLA</strong></p>
                 </div>
             </div>
             
