--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
             <div class="contact-info">
                 <h3>Contactez-nous</h3>
                 <p><i class="fas fa-phone"></i> Service Client: 92 87 16 05</p>
-                <p><i class="fas fa-envelope"></i> Email: contact@boutiqueenligne.tg</p>
+                <p><i class="fas fa-envelope"></i> Email: jeanskodoc22@gmail.com</p>
                 <p><i class="fas fa-map-marker-alt"></i> Lomé, Togo</p>
             </div>
             
@@ -479,7 +479,7 @@
                 <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
             </div>
             
-            <p>&copy; 2023 Boutique En Ligne - Tous droits réservés</p>
+            <p>&copy; 2025 Boutique En Ligne - Tous droits réservés</p>
         </footer>
     </div>
 
