--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
             </div>
             
             <nav>
-                <a href="boutique.html" class="nav-btn">
+                <a href="client.html" class="nav-btn">
                     <i class="fas fa-shopping-cart"></i> Voir la Boutique
                 </a>
                 <a href="admin.html" class="nav-btn admin">
