--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
             <h1>Votre Plateforme de Vente Complète</h1>
             <p>Gérez votre boutique en ligne, vendez vos produits et acceptez les paiements mobiles en toute simplicité. Solution tout-en-un pour commerçants et clients.</p>
             <div>
-                <a href="boutique.html" class="cta-btn">
+                <a href="client.html" class="cta-btn">
                     <i class="fas fa-shopping-bag"></i> Voir les Produits
                 </a>
                 <a href="admin.html" class="cta-btn">
