--- a/admin.html
+++ b/admin.html
@@ -903,7 +903,7 @@
             <div class="admin-details">
                 <div class="admin-detail">
                     <i class="fas fa-user"></i>
-                    <span><strong>Nom:</strong> Kossi AGBELENKO</span>
+                    <span><strong>Nom:</strong> KOLA Maniwah Essohouna</span>
                 </div>
                 <div class="admin-detail">
                     <i class="fas fa-phone"></i>
@@ -915,7 +915,7 @@
                 </div>
                 <div class="admin-detail">
                     <i class="fas fa-map-marker-alt"></i>
-                    <span><strong>Localisation:</strong> Lomé, Togo</span>
+                    <span><strong>Localisation:</strong> KARA, Togo</span>
                 </div>
             </div>
         </div>
@@ -1013,7 +1013,7 @@
         </div>
         
         <footer>
-            <p>© 2025 - Plateforme de Vente en Ligne | Administrateur: Kossi AGBELENKO</p>
+            <p>© 2025 - Plateforme de Vente en Ligne | Administrateur: KOLA Maniwah Essohouna</p>
         </footer>
     </div>
 
