--- a/boutique.html
+++ b/boutique.html
@@ -1197,7 +1197,7 @@
             <div class="admin-details">
                 <div class="admin-detail">
                     <i class="fas fa-user"></i>
-                    <span><strong>Nom:</strong> <span id="admin-nom">Kossi AGBELENKO</span></span>
+                    <span><strong>Nom:</strong> <span id="admin-nom">KOLA Maniwah Essohouna</span></span>
                 </div>
                 <div class="admin-detail">
                     <i class="fas fa-phone"></i>
@@ -1205,11 +1205,11 @@
                 </div>
                 <div class="admin-detail">
                     <i class="fas fa-envelope"></i>
-                    <span><strong>Email:</strong> <span id="admin-email">agbelenko.kossi@gmail.com</span></span>
+                    <span><strong>Email:</strong> <span id="admin-email">jeanskodoc22@gmail.com</span></span>
                 </div>
                 <div class="admin-detail">
                     <i class="fas fa-map-marker-alt"></i>
-                    <span><strong>Localisation:</strong> <span id="admin-location">Lomé, Togo</span></span>
+                    <span><strong>Localisation:</strong> <span id="admin-location">KARA, Togo</span></span>
                 </div>
             </div>
         </div>
@@ -1727,10 +1727,10 @@
             
             // Informations de l'administrateur
             const adminInfo = {
-                nom: "Kossi AGBELENKO",
+                nom: "KOLA Maniwah Essohouna",
                 whatsapp: "+228 92 87 16 05",
-                email: "agbelenko.kossi@gmail.com",
-                location: "Lomé, Togo"
+                email: "jeanskodoc22@gmail.com",
+                location: "KARA, Togo"
             };
             
             // Identifiants administrateur (à modifier pour la production)
@@ -2628,3 +2628,4 @@
     </script>
 </body>
 </html>
+
