--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
                 </div>
                 <div>
                     <h1 class="boutique-name">Plateforme de Vente en Ligne</h1>
-                    <p class="owner">Administrateur: <strong>Kossi AGBELENKO</strong></p>
+                    <p class="owner">Administrateur: <strong>KOLA</strong></p>
                 </div>
             </div>
             
@@ -990,7 +990,7 @@
                 <div class="admin-details">
                     <div class="admin-detail">
                         <i class="fas fa-user" aria-hidden="true"></i>
-                        <span><strong>Nom:</strong> Kossi AGBELENKO</span>
+                        <span><strong>Nom:</strong> KOLA</span>
                     </div>
                     <div class="admin-detail">
                         <i class="fas fa-phone" aria-hidden="true"></i>
