Update administrator name in contact information

--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
                 <p><i class="fas fa-phone" aria-hidden="true"></i> Service Client: 92 87 16 05</p>
                 <p><i class="fas fa-envelope" aria-hidden="true"></i> Email: agbelenko.kossi@gmail.com</p>
                 <p><i class="fas fa-map-marker-alt" aria-hidden="true"></i> Lomé, Togo</p>
-                <p><i class="fas fa-user-shield" aria-hidden="true"></i> Administrateur: Kossi AGBELENKO</p>
+                <p><i class="fas fa-user-shield" aria-hidden="true"></i> Administrateur: KOLA</p>
             </div>
             
             <div class="social-links">
