--- a/client.html
+++ b/client.html
@@ -1329,7 +1329,7 @@
             
             // Ouvrir le portail de paiement ESODI
             esodiModalBtn.addEventListener('click', function() {
-                const esodiUrl = "https://jeanskodoc.github.io/Carte-virtuelle-/";
+                const esodiUrl = "https://jeanskodoc.github.io/-CONOMIE-/";
                 window.open(esodiUrl, '_blank');
                 
                 // Afficher une notification
